@@ -45,8 +45,6 @@ extern		"C"
 		struct cursor *next;
 	};
 
-	extern int	no_auto_trans;
-
 /* define this for simplicity as well as compatibility */
 
 #define		  SQLCODE	 sqlca.sqlcode
